src/css/main.scss
$titleColor: #db7500;
$textColor: black;
$black: #1b2642;
$myViolet: #874EDD;
$myOrange: #FDC132;

body {
	font-family: Roboto;
	padding: 0; 
	margin: 0;
	align-items: center;
	justify-content: center;
	text-align: center;
	background: #E5E5E5;
	display: flex;
	color: $textColor;
}

button {
	background: $black;
	color: $textColor;
	border-radius: 5px;
	border: 1px solid $textColor;
	font-size: 2em;
	font-weight: 100;
	outline: none;
	margin: 0;
	padding: 5px 15px 10px;
	transition: .2s;
  
	&:hover, &:active, &:disabled {
		background: $textColor;
		color: $black;
	}
	&:active {
		outline: 2px solid $textColor;
	}
	&:focus {
		border: 1px solid $textColor;
	}
	button + button {
		margin-left: 3px;
	}
}

/* ----------- COMPONENTS ----------- */

.box {
	background-color: $myViolet;
	border-radius: 2px;
	color: white;

	align-items: center;
	justify-content: center;
	display: flex;
	margin-top: auto;
	margin-bottom: auto;
}

.rankingNumber {
	font-family: Lato;
	font-style: normal;
	font-weight: 900;
	font-size: 20px;
	line-height: 20px;

	color: $myOrange;

	display: flex;
	align-items: center;
	text-align: center;
}

.highlightedRankingNumber {
	font-size: 35px;
	color: $myViolet;
}

/* ----------- SECTION ----------- */

.section {
	background-color: white;
	box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
	padding: 25px;
}
.sectionTitle {
	color: #464646;
	font-style: normal;
	font-weight: bold;
	font-size: 16px;
	line-height: 20px;

	margin: 0;

	text-align: left;
}

/* ----------- TOP DES CITATIONS ----------- */

$citationHeight: 50px;

#topCitations { 
	width: 467px;
	height: 647px;

	display: flex;
	flex-direction: column;

	.box {
		width: 62px;
		height: $citationHeight;
	}
}

.citationText {
	font-style: italic;
	font-weight: normal;
	font-size: 10px;
	line-height: 10px;
	text-align: justify;

	color: #757575;
	flex-grow: 1;
}
.citationAuthor {
	font-style: normal;
	font-weight: normal;
	font-size: 10px;
	line-height: 10px;
	color: #BEBEBE;
	align-self: flex-start;
}

.citationContainer {
	margin-top: 20px;
	width: 95%;
	height: auto;

	display: grid;
	grid-template-columns: 10% 17% 73%;
	
	.rankingNumber {
		grid-column-start: 1;
	}
	.box {
		grid-column-start: 2;
	}
	.citationTextAndAuthor {
		grid-column-start: 3;
	}
}

.citationTextAndAuthor {
	display: flex;
	align-items: flex-start;
	flex-direction: column;
}

.pageNavigation {
	margin-top: auto;
}

